--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
         pip install -r requirements/test.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python src/manage.py test
